<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_navigation"
    style="@style/Widget.SilverGuardian.BottomNavigation"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_nav_height"
    android:layout_marginStart="@dimen/bottom_nav_margin_horizontal"
    android:layout_marginEnd="@dimen/bottom_nav_margin_horizontal"
    android:layout_marginBottom="@dimen/bottom_nav_margin_bottom"
    app:menu="@menu/bottom_nav_menu" />
